Correct alignment and wording

--- a/assets/sass/local.sass
+++ b/assets/sass/local.sass
@@ -37,3 +37,19 @@
 
 .psr-complete-links
   padding-left: 18px
+
+.psr-review-task-list
+  margin-left: 0
+  padding-left: 0
+  list-style: none
+
+.psr-review-task-list > li
+  margin-left: 0
+
+.psr-review-task-list .moj-task-list__items
+  margin: 0
+  padding-left: 0
+  list-style: none
+
+.psr-review-task-list .moj-task-list__section
+  margin-left: 0
